# PyrsistenceSniper

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
pyrsistencesniper/: __init__.py  __main__.py  banner.py  cli.py
pyrsistencesniper/config/: default_profile.yaml
pyrsistencesniper/core/: __init__.py  context.py  discovery.py  filesystem.py  helpers.py  image.py  log.py  lolbins.py  models.py  pipeline.py  profile.py  registry.py  resolver.py  signer.py  winutil.py
pyrsistencesniper/data/: lolbins.json
pyrsistencesniper/enrichment/: __init__.py  base.py  runner.py
pyrsistencesniper/forensics/: __init__.py  filesystem.py  registry.py  signer.py
pyrsistencesniper/models/: __init__.py  check.py  finding.py
pyrsistencesniper/output/: __init__.py  base.py  console.py  console_output.py  csv_output.py  html_output.py  report.html.j2  xlsx_output.py
pyrsistencesniper/plugins/: __init__.py  base.py  runner.py
pyrsistencesniper/plugins/T1037/: gp_scripts.py  logon_scripts.py
pyrsistencesniper/plugins/T1053/: ghost_task.py  scheduled_tasks.py
pyrsistencesniper/plugins/T1098/: rid_hijacking.py
pyrsistencesniper/plugins/T1137/: office_addins.py  office_dll_override.py  office_templates.py  office_test_dll.py  outlook_home_page.py  vba_monitors.py
pyrsistencesniper/plugins/T1543/: service_failure_actions.py  windows_services.py
pyrsistencesniper/plugins/T1546/: accessibility_tools.py  amsi_providers.py  app_paths.py  appcert_dlls.py  appinit_dlls.py  assistive_technology.py  cmd_autorun.py  com_hijack.py  debugger_hijacking.py  disk_cleanup.py  error_handler_cmd.py  explorer_clsid_hijack.py  file_association.py  ifeo.py  netsh_helper.py  power_automate.py  powershell_profiles.py  protocol_handlers.py  recycle_bin_com.py  screensaver.py  shell_execute_hooks.py  telemetry_controller.py  typelib_hijack.py  windows_terminal.py  wmi_subscriptions.py
pyrsistencesniper/plugins/T1547/: active_setup.py  boot_execute.py  boot_verification.py  dsrm_backdoor.py  explorer_context_menu.py  explorer_persistence.py  font_drivers.py  lsa_packages.py  print_monitors.py  run_keys.py  run_services.py  shell_folders.py  shell_launcher.py  startup_folder.py  terminal_services.py  time_providers.py  winlogon.py
pyrsistencesniper/plugins/T1556/: lsa_password_filter.py  network_provider.py
pyrsistencesniper/plugins/T1574/: appdomain_manager.py  content_index_dll.py  dll_loading.py  dotnet_profiler_registry.py  dotnet_startup_hooks.py  known_dlls.py  profiler_env_vars.py  snmp_extension.py
pyrsistencesniper/resolution/: __init__.py  helpers.py  lolbins.py  normalize.py  resolver.py
pyrsistencesniper/ui/: banner.py  progress.py
tests/: test_base_helpers.py  test_cli.py  test_context.py  test_enrichment_runner.py  test_execute_definition.py  test_filesystem.py  test_finding.py  test_helpers.py  test_image.py  test_import_boundaries.py  test_known_defaults.py  test_lolbins.py  test_normalize.py  test_output.py  test_pipeline.py  test_profile.py  test_registry.py  test_resolver.py  test_suppression.py
tests/core/: test_context.py  test_filesystem.py  test_log.py  test_lolbins.py  test_models.py  test_pipeline.py  test_profile.py  test_registry.py  test_resolver.py  test_winutil.py
tests/output/: test_base.py  test_output.py
tests/plugins/: conftest.py  test_accessibility_tools.py  test_active_setup.py  test_amsi_providers.py  test_app_paths.py  test_appcert_dlls.py  test_appinit_dlls.py  test_assistive_technology.py  test_base.py  test_boot_execute.py  test_com_hijack.py  test_content_index_dll.py  test_debugger_hijacking.py  test_definition_completeness.py  test_disk_cleanup.py  test_dll_loading.py  test_dotnet_startup_hooks.py  test_dsrm_backdoor.py  test_error_handler_cmd.py  test_explorer_context_menu.py  test_explorer_persistence.py  test_ghost_task.py  test_gp_scripts.py  test_ifeo.py  test_known_dlls.py  test_logon_scripts.py  test_lsa_packages.py  test_lsa_password_filter.py  test_network_provider.py  test_office_addins.py  test_office_dll_override.py  test_office_templates.py  test_outlook_home_page.py  test_power_automate.py  test_powershell_profiles.py  test_print_monitors.py  test_profiler_env_vars.py  test_protocol_handlers.py  test_registry_meta.py  test_rid_hijacking.py  (+24 more)
