[project]
name = "pyrsistencesniper"
version = "0.3.0"
description = ""
authors = [
    {name = "Maurice Fielenbach",email = "info@hexastrike.com"}
]
requires-python = ">=3.10"
dependencies = [
    "libregf-python (>=20240303,<20280000)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "signify (>=0.9.2,<0.10.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "platformdirs (>=4.9.2,<5.0.0)",
    "rich (>=13.0,<15.0)",
    "defusedxml (>=0.7.1,<1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
pyrsistencesniper = "pyrsistencesniper.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["pyrsistencesniper", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
    "RUF",  # ruff-specific rules
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "signify.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyregf"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "defusedxml.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "ruff (>=0.15.2,<0.16.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)"
]
