[project]
name = "pyrsistencesniper"
version = "0.8.0"
description = "Offline Windows Persistence Detection"
authors = [
    {name = "Maurice Fielenbach", email = "info@hexastrike.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "forensics",
    "dfir",
    "incident-response",
    "persistence",
    "windows",
    "registry",
    "threat-hunting",
    "security",
    "malware-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
]
dependencies = [
    "libregf-python (==20240421)",
    "pyyaml (==6.0.3)",
    "jinja2 (==3.1.6)",
    "lief (==0.17.6)",
    "asn1crypto (==1.5.1)",
    "httpx (==0.28.1)",
    "platformdirs (==4.9.4)",
    "rich (==14.3.3)",
    "defusedxml (==0.7.1)",
    "openpyxl (==3.1.5)"
]


[project.urls]
Homepage = "https://github.com/Hexastrike/PyrsistenceSniper"
Repository = "https://github.com/Hexastrike/PyrsistenceSniper"
Issues = "https://github.com/Hexastrike/PyrsistenceSniper/issues"

[build-system]
requires = ["poetry-core==2.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
pyrsistencesniper = "pyrsistencesniper.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["pyrsistencesniper", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
    "RUF",  # ruff-specific rules
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "PT",   # flake8-pytest-style
    "ARG",  # flake8-unused-arguments
    "ERA",  # eradicate (commented-out code)
    "PL",   # pylint
    "PERF", # perflint
    "RET",  # flake8-return
    "FA",   # flake8-future-annotations
    "T20",  # flake8-print
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "PLR0913",  # too many arguments, legitimate for AnalysisContext, plugin constructors
    "PLC0415",  # import-outside-toplevel, inline imports kept only for circular-import avoidance
    "S101",     # assert used for internal invariants
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "ARG", "PLR2004", "PT019", "N999"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-cast", "truthy-bool"]

[[tool.mypy.overrides]]
module = "lief.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asn1crypto.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyregf"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "defusedxml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openpyxl.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config", "-ra"]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["pyrsistencesniper"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@overload",
]
show_missing = true
fail_under = 80

[dependency-groups]
dev = [
    "pytest (==9.0.2)",
    "pytest-cov (==7.1.0)",
    "mypy (==1.19.1)",
    "ruff (==0.15.2)",
    "types-pyyaml (==6.0.12.20250915)",
    "pre-commit (==4.5.1)"
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["pyrsistencesniper/__init__.py:__version__"]
branch = "main"
major_on_zero = false
commit_message = "chore(release): v{version} [skip ci]"
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "style", "docs", "chore", "ci", "test", "build"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor", "style"]
